# MclSplat

./: LICENSE  README.md  environment.yml  package.xml  requirements.txt  setup.cfg  setup.py
cfg/: llff_global.yaml  nerfstudio.yaml  turtle.yaml
launch/: navigate_launch.py
locnerf/: full_filter.py  full_nerf_helpers.py  nav_node.py  navigator_base.py  particle_filter.py  render_helpers.py  robot_motion_model.py
rviz/: rviz.rviz
tools/: eval_logs.py
tools/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
