<?xml version="1.0"?>
<package format="3">
  <name>mclsplat</name>
  <version>0.0.1</version>
  <description>Run particle filter with Gaussian Splats</description>

  <maintainer email="patrick_christian.thomasius@smail.th-koeln.de">Patrick Thomasius</maintainer>

  <license>MIT</license>


  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
